--- a/public/front/css/bootstrap-theme.css
+++ b/public/front/css/bootstrap-theme.css
@@ -1340,10 +1340,12 @@ th {
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
+  background: #1abc9c;
+    color: white;
 }
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
-  background-color: #f9f9f9;
+  
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
