--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -539,8 +539,10 @@ table tr th { color: #688a7e;}
     height: 100%;
 
     position: fixed;
+     
+     color: white;
 
-    background: #394a59;
+    background: #2c3e50;
 
 }
 
@@ -726,7 +728,7 @@ ul.sidebar-menu li a{
 
     border-right: 1px solid #D7D7D7;
 
-    border-bottom: 1px solid #D7D7D7;
+    border-bottom: 1px solid #00D0BD;
 
 }
 
@@ -740,7 +742,7 @@ ul.sidebar-menu li a{
 
 ul.sidebar-menu li.active a, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:focus {
 
-    background: #2e3b46;
+    background: ;
 
     color: #fff;
 
@@ -1915,7 +1917,10 @@ div[data-role="editor-toolbar"] {
   border: 1px solid #f9aa0b;
 
 }
-
+.info{
+    background: #3498db;
+    color: white;
+}
 .info-box.primary {
 
   background: #20a8d8;
@@ -1980,9 +1985,9 @@ div[data-role="editor-toolbar"] {
 
   color : #fff;
 
-  background : #57889c;
+  background : #1abc9c;
 
-  background-color : #57889c;
+  background-color : #1abc9c;
 
 }
 
@@ -1990,9 +1995,9 @@ div[data-role="editor-toolbar"] {
 
   color : #fff;
 
-  background : #26c281;
+  background : #2ecc71;
 
-  background-color : #26c281;
+  background-color : #2ecc71;
 
 }
 
@@ -2100,9 +2105,7 @@ div[data-role="editor-toolbar"] {
 
   color : #fff;
 
-  background : #1a2732;
-
-  background-color : #1a2732;
+  background : #2c3e50;
 
 }
 
@@ -2153,7 +2156,7 @@ div[data-role="editor-toolbar"] {
   -moz-box-shadow: none;
 
   box-shadow: none;
-
+ border-top: 4px solid #8cddcd;
   margin-bottom: 30px;
 
 }
