--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -40,7 +40,7 @@ body {
 
     color: #797979;
 
-    background: #eeeeee;
+    background: #f2f7f8;
 
     font-family: 'Lato', sans-serif;
 
@@ -540,9 +540,9 @@ table tr th { color: #688a7e;}
 
     position: fixed;
      
-     color: white;
+     
 
-    background: #2c3e50;
+    background: #ffffff;
 
 }
 
@@ -644,7 +644,7 @@ ul.sidebar-menu li ul.sub li a {
 
 ul.sidebar-menu li ul.sub li a:hover, ul.sidebar-menu li ul.sub li.active a {
 
-    color: #fff;
+    color:;
 
     -webkit-transition: all 0.3s ease;
 
@@ -702,7 +702,7 @@ ul.sidebar-menu li a span{
 
 ul.sidebar-menu li a{
 
-    color: #d0d8df;
+    color:#54667a;
 
     text-decoration: none;
 
@@ -728,7 +728,7 @@ ul.sidebar-menu li a{
 
     border-right: 1px solid #D7D7D7;
 
-    border-bottom: 1px solid #00D0BD;
+    border-bottom: 1px solid #E9E9E9;
 
 }
 
@@ -744,7 +744,7 @@ ul.sidebar-menu li.active a, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:fo
 
     background: ;
 
-    color: #fff;
+    color: #999;
 
     display: block;
 
@@ -2105,7 +2105,7 @@ div[data-role="editor-toolbar"] {
 
   color : #fff;
 
-  background : #2c3e50;
+  background : linear-gradient(to right, #0178bc 0%, #00bdda 100%);
 
 }
 
