--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -8113,16 +8113,29 @@ ul.amounts li {
 
 
 
+.form-control {
+    
+      border-radius: 0px;
 
+    -webkit-border-radius: 0px;
+}
 .round-input {
 
-    border-radius: 500px;
+    border-radius: 0px;
 
-    -webkit-border-radius: 500px;
+    -webkit-border-radius: 0px;
 
 }
 
-
+.table-bordered > thead > tr > th, .table-bordered > thead > tr > td {
+    border-bottom-width: 2px;
+    background: #3377ec;
+    color: white;
+}
+table {
+    max-width: 100%;
+    background-color: white;
+}
 
 
 
